<resources>
    <!-- Numbered List strings -->
    <string name="app_name">Grouper</string>
    <string name="action_settings">Settings</string>
    <string name="action_purge">Delete All</string>
    <string name="empty_text">You have no groups, tap the plus button and make some!</string>
    <string name="title_activity_group_selector">GroupSelector</string>

    <!-- Group selector strings -->
    <!-- Custom name section strings -->
    <string name="name">Name:</string>
    <string name="cust_name">Custom name</string>
    <!-- Group section strings -->
    <string name="num_hint">Number of items</string>
    <!-- Subgroup section strings -->
    <string name="sg_hint">Items per group</string>
    <!-- Save/cancel button strings -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="group_info">Enter group info</string>

    <string name="dyn_string">%1$s</string>
    <string name="num_groups">Num Items: %1$s</string>
    <string name="subg_amt">Items Per Group: %1$s</string>

    <string name="named_list">Named Groups</string>
    <string name="numbered_list">Numbered Groups</string>
    <string name="saved_items">Saved Items</string>
    <string name="saved_names">Saved Lists of Names</string>
    <string name="about">About App</string>
    <string name="sub_items">Extras</string>

    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>

    <string name="save_data">Save data</string>
    <string name="new_name">New Name</string>

    <string name="remove_name">Remove name</string>
    <string name="empty_list_of_names">You have no lists of names, go ahead and make some!</string>

    <string name="dyn_id">Group ID: %1$s</string>
    <string name="id">Group ID: </string>
    <string name="choose_group">Choose a group:</string>
    <string name="group_name">Group Name</string>

    <string name="intermediary_string">You don\'t have any lists of names yet, you need to make one first!</string>
    <string name="intermediary_button">Take me there!</string>

    <string name="about_app">Grouper, an app by Darrien Glasser</string>
    <string name="build_version">Version %1$s</string>
    <string name="source">Grouper is open source! Check out the code <a href="https://github.com/DarrienG/Grouper_Application">here</a>.</string>
    <string name="libs">Third party libraries:</string>
    <string name="realm"><a href="https://github.com/realm/realm-java">Realm for Android</a></string>
</resources>