<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/custName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dyn_string"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:id="@+id/numGroups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_groups"
                android:layout_below="@id/custName"
                android:textSize="15sp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:id="@+id/numSGroups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subg_amt"
                android:layout_below="@id/numGroups"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
